Switched name of relation to be slightly less confusing, and fixed bug in registration logic

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,5 +8,5 @@ description: >
   This charm manages the storage node (DataNode) for HDFS.
 tags: ["applications", "bigdata", "hadoop", "apache"]
 provides:
-  datanode:
+  namenode:
     interface: datanode
