Match previous relation name and protocol to support upgrades from previous charms

--- a/layer.yaml
+++ b/layer.yaml
@@ -1,4 +1,4 @@
-includes: ['layer:hadoop-base', 'interface:datanode']
+includes: ['layer:hadoop-base', 'interface:dfs-slave']
 options:
   hadoop-base:
     ports:
